# dj-plate

./: .gitignore  README  README.md  db.sqlite3  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
accounts/: admin.py
accounts/migrations/: 0001_initial.py
core/: urls.py  views.py
project/: settings.py  urls.py
templates/: _base.html  base.html  billing.html  dashboard.html  element.html  home.html  index.html  list.html  profile.html  settings.html
templates/cotton/: _home.html  _list.html
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
