[project]
name = "dj-plate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "crewai>=0.165.1",
  "django-allauth[socialaccount]>=65.11.1",
  "django-browser-reload>=1.18.0",
  "django-cotton>=2.1.3",
  "django-htmx>=1.23.2",
  "django-tailwind>=4.2.0",
  "honcho>=2.0.0",
]
